# GameFrame

./: .gitignore  CLAUDE.md  CMakeLists.txt  echo_client.py  main  main.cpp  test_event_loop.cpp  test_log_sender.cpp  test_logging.cpp  test_mpsc_queue.cpp  test_tcp_client.cpp
.claude/rules/: log.md  net.md  testing.md
.claude/skills/handoff/: SKILL.md
.codebuddy/rules/: epoll-proj-workflow.mdc
CLAUDE/MCP/: available-servers.md
CLAUDE/RULES/: api-stability.md  coding-style.md  resource-safety.md
CLAUDE/SKILLS/: add-protocol.md  build-and-run.md  debug-runtime.md  extend-framework.md
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DEBUGGING.md  DECISIONS.md  INTERVIEW.md  NEXT_TASKS.md  PROJECT_CONTEXT.md  timer_flow.html
http/: http_context.h  http_demo_main.cpp  http_request.h  http_response.h  http_server.cpp  http_server.h
log_sender/: log_sender.cpp  log_sender.h  logging.h
log_server/: log_file.cpp  log_file.h  main.cpp  roll_stress.py  smoke_client.py
src/: buffer.h  channel.cpp  channel.h  connection.cpp  connection.h  event_loop.cpp  event_loop.h  event_loop_thread.cpp  event_loop_thread.h  event_loop_thread_pool.cpp  event_loop_thread_pool.h  length_prefixed_codec.h  server.cpp  server.h  tcp_client.cpp  tcp_client.h  timer_queue.cpp  timer_queue.h
util/: buffer.h  length_prefixed_codec.h  mpsc_queue.h
